--- a/SG de Productos/Web.config
+++ b/SG de Productos/Web.config
@@ -34,11 +34,11 @@
 	
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-	  <!--<defaultDocument enabled="true">
+	  <defaultDocument enabled="true">
 		  <files>
-			  <add value="./Default.aspx" />
+			  <add value="./Views/Default.aspx" />
 		  </files>
-	  </defaultDocument>-->
+	  </defaultDocument>
   </system.webServer>
 	
   <runtime>
