--- a/SG de Productos/Web.config
+++ b/SG de Productos/Web.config
@@ -39,6 +39,7 @@
 			  <add value="./Views/Default.aspx" />
 		  </files>
 	  </defaultDocument>
+	  <!--<directoryBrowse enabled="true" />-->
   </system.webServer>
 	
   <runtime>
